Update CarInventoryService.java
updated line 57